adds very first draft of abstract

--- a/report/report.tex
+++ b/report/report.tex
@@ -59,9 +59,9 @@ School of Mathematics and Computer Science, Heriot-Watt University, Edinburgh \\
 
 \begin{document}
 \maketitle
+
 \begin{abstract}
-  This should be a 6-8 page conference paper with appendices, if relevant.
-  Good reports from 2021: number 5 !
+  In today's world, there is a need for conversational systems to handle multi-party dialogues. Howevery, multi-party conversational systems still struggle to be usable in a real-life context. Compared to dyadic conversations, there are additional challenges to overcome, like turn-taking, speaker identification, … They are needed as there are many application areas for these systems, such as …  In this paper, we present our work on a multi-party conversational system, which invites two users to play a trivia game in a hospital waiting area. The system detects agreement with a very high accuracy and can … (add evaluation stuff). Our system can be configured to be used on the ARI robot deployed in a hospital waiting area in the course of the SPRING project.
 \end{abstract}
 
 
