adds correct reference for Angus' paper

--- a/report/references.bib
+++ b/report/references.bib
@@ -176,11 +176,15 @@
   pages     = {305–314}
 }
 
-@misc{Group_1_unpublished_paper,
-  url    = {https://heriotwatt.sharepoint.com/sites/F20DV-CollaborativeQuizProject/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x012000C31DB7E9EEFD0240A1EA2B93F809CD1B&id=%2Fsites%2FF20DV%2DCollaborativeQuizProject%2FShared%20Documents%2FGeneral%2Faddlesee%2Diwsds%2Dmpc%2Epdf&parent=%2Fsites%2FF20DV%2DCollaborativeQuizProject%2FShared%20Documents%2FGeneral},
-  year   = {2023},
-  author = {Angus Addlesee and Weronika Sieinska and Nancie Gunson and Daniel Hernández García and Christian Dondrup and Oliver Lemon}
+@inproceedings{Addlesee_Data_2023,
+  title   = {Data Collection for Multi-party Task-based Dialogue in Social Robotics},
+  author  = {Addlesee, Angus and Sieinska, Weronika and Gunson, Nancie and Hernández García, Daniel and Dondrup, Christian and Lemon, Oliver},
+  url     = {https://drive.google.com/file/d/1gUsMOlYHDzreB17CYNFxDOu-dWCtBQ4M/view?usp=sharing&usp=embed_facebook},
+  journal = {IWSDS},
+  year    = {2023},
+  month   = {Feb}
 }
+
 
 @article{Cohen_1960,
   title     = {A Coefficient of Agreement for Nominal Scales},
