--- a/report/report.tex
+++ b/report/report.tex
@@ -79,11 +79,9 @@ Our system is developed to be fitted onto an ARI robot in the course of the SPRI
 \section{Background}
 \label{sec:background}
 
-\textit{from coursework spec:} literature review / related work, including a critical analysis of the field, and commentary on applicability of the technologies and methods used in emerging technologies and application areas
-
 \subsection{Socially Assistive Robots}
 \label{subsec:socially_assistive_robots}
-For healthcare, as well as for any other sector, the difficulty of successfully designing SARs lies in creating robots that can effectively converse with humans and adhere to social norms \cite{moujahid_multi_party_2022}. The more expressive a robot is, the more it will be perceived as intelligent, conscious and polite \cite{moujahid_multi_party_2022}. To achieve such a positive perception, multiple parts need to be combined into one conversational system, such as the ability to carry out visually grounded as well as task-based dialogues, to perceive and discuss its environment and to chit-chat \cite{gunson_visually_aware_2022}.
+For healthcare, as well as for any other sector, the difficulty of successfully designing SARs lies in creating robots that can effectively converse with humans and adhere to social norms \cite{moujahid_multi_party_2022}. The more expressive a robot is, the more it will be perceived as intelligent, conscious and polite \cite{moujahid_multi_party_2022}.
 
 The SPRING project conducts research on a SAR robot deployed in an eldercare hospital reception area \cite{addlesee_comprehensive_2020}. The conversational system is deployed on the humanoid ARI robot produced by Pal Robotics \cite{palrobot}. ARIs capabilities can be extended with custom AI algorithms, in the case of SPRING-ARI a visual perception system, a dialogue system, and a social interaction planner \cite{addlesee_comprehensive_2020}. While the SPRING-ARI system successfully demonstrates that task-based, social and visually grounded dialogue can be combined with physical actions, it still lacks the ability to handle conversations with more than one person simultaneously \cite{addlesee_comprehensive_2020}.
 
@@ -99,7 +97,7 @@ Especially turn-taking poses a central problem. It is defined as follows:
 
 In dyadic conversations, there are only two roles a participant can take: speaker or listener, hence it is clear when and to whom the turn is yielded. In multi-party conversations, participants can take multiple roles, therefore turn-taking needs to be coordinated \cite{Johansson_Skantze_2015}. Humans signal their intents mostly through gaze, but also through pauses, prosody, and body positioning \cite{Żarkowski_2019}. To copy this behaviour, earlier models for conversational systems relied on silence time-outs to coordinate turn-taking, however, this approach is found to be too simplistic \cite{skantze_turn_taking_2021}. Instead, mimicking human turn-taking behaviour better by using a combination of verbal and non-verbal cues leads to robots that are better perceived \cite{moujahid_multi_party_2022}.
 
-\textit{State exactly the gap that we will fill - whatever that will be}
+
 
 
 \section{Data Collection}
@@ -328,6 +326,7 @@ To make the system feel more unique and less robotic, we made use of Natural Lan
 To further improve on NLG within this system, some content moderation could be performed on the generations, to ensure that there are no inappropriate outputs, this can be done entirely within OpenAI's API.  Also, the system could be updated to make use of GPT-4, as GPT-4 works more effectively to avoid inappropriate content and has greater problem solving abilities, however, at this current time it is not publicly available \cite{GPT_4_2023,OpenAI_2023}.
 
 
+% EVALUATION PART
 \section{Evaluation}
 \label{sec:evaluation}
 
@@ -371,17 +370,23 @@ Fuzzy string matching is a computational technique employed to approximate strin
 \section{Conclusion}
 \label{sec:conclusion}
 
+In this report, we have presented a conversational system to play a game of ``Who wants to be millionaire?'' in a multi-party setting. The system is able to detect users agreeing on a final answer, or will continue asking for an answer to encourage users to reach a conclusion. The question and answer options are displayed on a website, which is intended to mimic the ARI robot's screen.
+To evaluate the system, we conducted an experiment assessing users' perception of the system, as well as its performance.
+% Include more stuff from Katie
+
 \subsection{Ethical Reflection}
 \label{subsec:ethics}
+Our set of questions is predefined, therefore, the system does not use any wrong information.
+
 
 \section{Future Work}
 \label{sec:future_work}
 
-\begin{enumerate}
-  \item Account for people stating more than 1 answer in an utterance
-  \item
-\end{enumerate}
+There are several small-scale problems, that we only detected in the second iteration of our evaluation. Users were reading out all possible answers, which we did not account for. The system recognised this utterance as an answer entity, and assumed the users were offering or finalising an answer. The system's output was also sometimes overlooked, which made state tracking difficult. As an evaluation participant stated, text-to-speech output would make it feel more like a conversational system and remove the need for users to keep reading the host's responses. An issue to consider is how to make sure that the microphone does not pick up the system's own output.
 
+The main challenge for our system in terms of system architecture will be to move away from a two-microphone set-up to one microphone. To be able to do so, speech diarization must be able to work in real-time. The ARI robot is equipped with directional microphones, which can help mitigate the problems we encountered. Evaluation of the robot running our system will be necessary to evaluate if this is sufficient.
+
+Another challenge to solve is the system's tendency to accept answers even though only one user agreed. %add more of Katie's stuff
 
 
 \section*{Acknowledgments}
